<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_authorization"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ievolutioned.androidtsysapilibrary.example.auth.AuthorizationActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/device_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:ems="10"
                android:hint="@string/authorization_activity_device_id"
                android:inputType="number" />

            <EditText
                android:id="@+id/transaction_key"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/device_id"
                android:ems="10"
                android:hint="@string/authorization_activity_transaction_key"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/transaction_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/editText3"
                android:ems="10"
                android:hint="@string/authorization_activity_transaction_amount"
                android:inputType="number|numberDecimal" />

            <EditText
                android:id="@+id/card_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/transaction_amount"
                android:ems="10"
                android:hint="@string/authorization_activity_card_number"
                android:inputType="number" />

            <EditText
                android:id="@+id/expiration_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/card_number"
                android:ems="10"
                android:hint="@string/authorization_activity_expiration_date"
                android:inputType="date" />

            <EditText
                android:id="@+id/editText3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/transaction_key"
                android:ems="10"
                android:enabled="false"
                android:hint="@string/authorization_activity_card_data_source"
                android:inputType="textPersonName"
                android:text="@string/authorization_activity_card_data_source_default" />

            <Button
                android:id="@+id/call_service_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/expiration_date"
                android:layout_marginTop="14dp"
                android:text="@string/authorization_activity_send_button" />

            <TextView
                android:id="@+id/response_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/call_service_button"
                android:layout_marginTop="13dp"
                android:text="@string/authorization_activity_response_text" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
